Add uncacheable sanity test